trunk/Archive2/16/ce2e42c8aae8bf/output
main.cpp:15:46: error: 'Container' is not a template
  std::is_same<typename Container::Allocator, Container< Allocator>>{}  >::type
                                              ^
main.cpp: In function 'int main(int, char**)':
main.cpp:23:21: error: wrong number of template arguments (1, should be 2)
  Graph<Container<int>>;
                     ^
main.cpp:17:8: error: provided for 'template<class Container, typename std::enable_if<std::is_same<typename Container::Allocator, Container>{}>::type <anonymous> > struct Graph'
 struct Graph
        ^
